# Pixm-Source

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
docs/: architecture.md  determinism.md  ecs.md  game-loop.md  netcode.md  roadmap-net.md  roadmap.md
game/: Cargo.toml
game/godot/: pixm.gdextension  pixm.gdextension.uid  project.godot
game/godot/scenes/: Main.tscn70858696.tmp  MinionHPBar.gd  MinionHPBar.gd.uid  TestArena.gd  TestArena.gd.uid  TestArena.tscn  hp_bar.gd  hp_bar.gd.uid  main.gd  main.gd.uid  main.tscn
game/src/: lib.rs
game/src/bridge/: input_bridge.rs  mod.rs  renderer.rs
game/src/core/: ecs.rs  events.rs  mod.rs  types.rs
game/src/input/: collector.rs  events.rs  mod.rs
game/src/sim/: components.rs  mod.rs  rng.rs  spawn.rs  world.rs
game/src/sim/pathfinding/: astar.rs  grid.rs  mod.rs
game/src/sim/systems/: abilities.rs  ai.rs  buffs.rs  combat.rs  mod.rs  movement.rs  projectiles.rs
net/: Cargo.toml
net/examples/: ping.rs
net/src/: ack.rs  clock.rs  dht.rs  election.rs  lib.rs  nat.rs  peer.rs  protocol.rs  session.rs  transport.rs
net/src/rollback/: buffer.rs  mod.rs  prediction.rs  session.rs
