[package]
name    = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
net.path          = "../net"
bitcode.workspace = true
fixed.workspace   = true
serde.workspace   = true
tracing.workspace = true

hecs    = "0.10"   # ECS substrate
godot   = { git = "https://github.com/godot-rust/gdext", branch = "master" }

[lib]
crate-type = ["cdylib"]
